Set AGCC saturation limit
Tweak SoulCairn weathers a bit

--- a/enblocal.ini
+++ b/enblocal.ini
@@ -4,7 +4,7 @@ InitProxyFunctions=true
 ProxyLibrary=
 [PERFORMANCE]
 SpeedHack=true
-ShaderCache=true
+ShaderCache=false
 [ENGINE]
 ForceVSync=false
 VSyncSkipNumFrames=0
@@ -39,5 +39,5 @@ ScreenshotFormat=1
 [GUI]
 HighResolutionScaling=true
 ShowShadersWindow=true
-ShowWeatherWindow=false
+ShowWeatherWindow=true
 ShowObjectsWindow=false
