--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -1,18 +1,18 @@
 [ENBBLOOM.FX]
-TECHNIQUE=2
+TECHNIQUE=4
 =0
-Sensitivity=0.9
-Threshold=0.3
+Sensitivity=2.0
+Threshold=0.4
 Soft Threshold=0.5
-Mask out Sky=0.5
+Mask out Sky=0.2
 === Color ====0
 Intensity=1.0
-Saturation=1.2
+Saturation=1.0
 Tint=1, 1, 1
-Tonemap output=false
+Tonemap output=true
 === Shape ====0
 Samples=8
-Sigma=1.0
+Sigma=2.0
 === Masking ====0
 === Color ====0
 === Shape ====0
@@ -1265,13 +1265,13 @@ Sigma=1.0
 ----- Color -----=0
 ----- Shape -----=0
 ----- Adaptation -----=0
-Enable Adaptation=false
+Enable Adaptation=true
 Adaptation Samples=8
-Adaptation Impact=1.0
+Adaptation Impact=2.0
 Min Adaptation=0.0
 Max Adaptation=1.0
 ----- Lens Dirt -----=0
-Enable Lens Dirt=true
+Enable Lens Dirt=false
 Select Dirt Texture=0
 Dirt Intensity=0.5
 Dirt Spread=1.0
