--- a/enbseries/enbunderwater.fx.ini
+++ b/enbseries/enbunderwater.fx.ini
@@ -3,3 +3,8 @@ TECHNIQUE=1
 Underwater Fog Density=0.0
 near Plane=0.0
 far Plane=1.0
+| Underwater Fog Density=1.0
+| Fog Distance=1.0
+| Fog Start=0.0
+| Displacement Speed=1.0
+| Displacement Offset=1.0
