--- a/enbseries/enbeffect.fx.ini
+++ b/enbseries/enbeffect.fx.ini
@@ -19,7 +19,7 @@ Color:  Color Temperature (Interior)=6000.0
 Color:  Desaturation (Day)=0.8
 Color:  Desaturation (Night)=0.8
 Color:  Desaturation (Interior)=1.0
-Color:  Resaturation (Day)=0.4
+Color:  Resaturation (Day)=0.5
 Color:  Resaturation (Night)=0.5
 Color:  Resaturation (Interior)=0.25
 Color:  Hue Shift (Day)=1.0
@@ -36,3 +36,4 @@ Debug:  Enable AGCC Fade=true
 An ENB Preset by Guts and Adyss=0
 Debug:  Use Fujifilm F LOG=true
 • Nordwind •=0
+Debug:  Test=1.0
