--- a/enbseries/enbeffectprepass.fx.ini
+++ b/enbseries/enbeffectprepass.fx.ini
@@ -824,3 +824,28 @@ Show mask=false
 |  Glow Strength=1.0
 |  Glow Curve=2.0
 |  Glow Tint=0.5, 0.498, 0.498
+|  Calibrate Shadow Range=0.18
+|  Lighten Shadows=0.05
+|  Blur Shadows=0.1
+|  HDR Tone=0.2
+|  Air Density (Exterior)=0.0
+|  Air Density (Interior)=0.2
+|  Air Tint (Exterior)=1, 1, 1
+|  Air Tint (Interior)=1, 1, 1
+|  Air Distance (Exterior)=1.0
+|  Air Distance (Interior)=1.0
+|  Air Start (Exterior)=0.0
+|  Air Start (Interior)=0.0
+|  Show mask=false
+|  Sharpening Offset=1.0
+|  Sharpening Strength=1.0
+|  Sharpening Fadeout=3.0
+|  Ignore Skin=false
+|  Skin Gamma=1.0
+|  Skin Tone=50
+|  Skin Tint=0.49, 0.49, 0.49
+|  Effect fade distance=1.0
+|  FXAA Edge Threshhold=0.0
+|  FXAA Edge Threshhold Min=0.0
+|  FXAA Subpix Cap=0.75
+|  FXAA Subpix Trim=0.12
