--- a/enbseries/enbeffectprepass.fx.ini
+++ b/enbseries/enbeffectprepass.fx.ini
@@ -1,5 +1,5 @@
 [ENBEFFECTPREPASS.FX]
-TECHNIQUE=2
+TECHNIQUE=1
 =0
 Fake HDR=0
 Calibrate Shadow Range=0.18
@@ -23,7 +23,7 @@ Show mask=false
 | Blur Shadows=0.2
 | HDR Tone=0.2
 |===== Atmosphere ======0
-| Enable Atmosphere=true
+| Enable Atmosphere=false
 | Air Density (Exterior)=0.0
 | Air Density (Interior)=0.2
 | Air Tint (Exterior)=1, 1, 1
@@ -814,7 +814,7 @@ Show mask=false
 |----- Sharpening -----=0
 |----- Skin -----=0
 |----- AA -----=0
-| Enable FXAA=true
+| Enable FXAA=false
 | FXAA Edge Threshhold=0.0
 | FXAA Edge Threshhold Min=0.0
 | FXAA Subpix Cap=0.75
@@ -826,7 +826,7 @@ Show mask=false
 |  Glow Tint=0.5, 0.498, 0.498
 |  Calibrate Shadow Range=0.18
 |  Lighten Shadows=0.05
-|  Blur Shadows=0.1
+|  Blur Shadows=0.2
 |  HDR Tone=0.2
 |  Air Density (Exterior)=0.0
 |  Air Density (Interior)=0.2
@@ -838,9 +838,9 @@ Show mask=false
 |  Air Start (Interior)=0.0
 |  Show mask=false
 |  Sharpening Offset=1.0
-|  Sharpening Strength=1.0
+|  Sharpening Strength=0.3
 |  Sharpening Fadeout=3.0
-|  Ignore Skin=false
+|  Ignore Skin=true
 |  Skin Gamma=1.0
 |  Skin Tone=50
 |  Skin Tint=0.49, 0.49, 0.49
