--- a/enbseries/enbeffect.fx.ini
+++ b/enbseries/enbeffect.fx.ini
@@ -21,7 +21,7 @@ Color:  Desaturation (Night)=0.8
 Color:  Desaturation (Interior)=1.0
 Color:  Resaturation (Day)=0.6
 Color:  Resaturation (Night)=0.5
-Color:  Resaturation (Interior)=0.4
+Color:  Resaturation (Interior)=0.3
 Color:  Hue Shift (Day)=1.0
 Color:  Hue Shift (Night)=1.0
 Color:  Hue Shift (Interior)=1.0
@@ -37,3 +37,18 @@ An ENB Preset by Guts and Adyss=0
 Debug:  Use Fujifilm F LOG=true
 • Nordwind •=0
 Debug:  Test=1.0
+««« AISS »»»=0
+AISS:  Saturation Impact=1.0
+AISS:  Min Saturation=0.0
+AISS:  Max Saturation=0.75
+AISS:  Contrast Impact=1.0
+AISS:  Min Contrast=0.0
+AISS:  Max Contrast=3.0
+AISS:  Brightness Impact=1.0
+AISS:  Min Brightness=0.0
+AISS:  Max Brightness=3.0
+AISS:  Min Tint Color=0.0
+AISS:  Max Tint Color=1.0
+AISS:  Tint Impact=1.0
+AISS:  Min Tint=0.0
+AISS:  Max Tint=1.31
