my tweaks from a few days ago

--- a/enbseries/Weather/SkyrimFogRain_CM.ini
+++ b/enbseries/Weather/SkyrimFogRain_CM.ini
@@ -1,12 +1,12 @@
 [BLOOM]
-AmountDawn=0.1
-AmountSunrise=0.1
-AmountDay=0.1
-AmountSunset=0.1
-AmountDusk=0.1
-AmountNight=0.1
-AmountInteriorDay=0.1
-AmountInteriorNight=0.1
+AmountDawn=1.0
+AmountSunrise=1.0
+AmountDay=1.0
+AmountSunset=1.0
+AmountDusk=1.0
+AmountNight=1.0
+AmountInteriorDay=0.3
+AmountInteriorNight=0.3
 [LENS]
 AmountDawn=1.0
 AmountSunrise=1.0
@@ -22,7 +22,7 @@ StarsIntensitySunrise=1.0
 StarsIntensityDay=1.0
 StarsIntensitySunset=1.0
 StarsIntensityDusk=1.0
-StarsIntensityNight=1.0
+StarsIntensityNight=4.0
 StarsIntensityInteriorDay=1.0
 StarsIntensityInteriorNight=1.0
 StarsCurveDawn=1.0
@@ -51,10 +51,10 @@ AuroraBorealisCurveInteriorDay=1.0
 AuroraBorealisCurveInteriorNight=1.0
 GradientIntensityDawn=1.0
 GradientIntensitySunrise=1.0
-GradientIntensityDay=1.0
-GradientIntensitySunset=1.0
+GradientIntensityDay=1.4
+GradientIntensitySunset=1.000001
 GradientIntensityDusk=1.0
-GradientIntensityNight=1.0
+GradientIntensityNight=1.000001
 GradientIntensityInteriorDay=1.0
 GradientIntensityInteriorNight=1.0
 GradientDesaturationDawn=0.0
@@ -82,11 +82,11 @@ GradientTopCurveNight=1.0
 GradientTopCurveInteriorDay=1.0
 GradientTopCurveInteriorNight=1.0
 GradientTopColorFilterDawn=1, 1, 1
-GradientTopColorFilterSunrise=1, 1, 1
-GradientTopColorFilterDay=1, 1, 1
-GradientTopColorFilterSunset=1, 1, 1
+GradientTopColorFilterSunrise=0.651, 0.769, 0.816
+GradientTopColorFilterDay=0.467, 0.839, 1
+GradientTopColorFilterSunset=0.627, 0.776, 0.839
 GradientTopColorFilterDusk=1, 1, 1
-GradientTopColorFilterNight=1, 1, 1
+GradientTopColorFilterNight=0.157, 0.157, 0.157
 GradientTopColorFilterInteriorDay=1, 1, 1
 GradientTopColorFilterInteriorNight=1, 1, 1
 GradientMiddleIntensityDawn=1.0
@@ -106,11 +106,11 @@ GradientMiddleCurveNight=1.0
 GradientMiddleCurveInteriorDay=1.0
 GradientMiddleCurveInteriorNight=1.0
 GradientMiddleColorFilterDawn=1, 1, 1
-GradientMiddleColorFilterSunrise=1, 1, 1
-GradientMiddleColorFilterDay=1, 1, 1
-GradientMiddleColorFilterSunset=1, 1, 1
+GradientMiddleColorFilterSunrise=0.651, 0.769, 0.816
+GradientMiddleColorFilterDay=0.467, 0.839, 1
+GradientMiddleColorFilterSunset=0.627, 0.776, 0.839
 GradientMiddleColorFilterDusk=1, 1, 1
-GradientMiddleColorFilterNight=1, 1, 1
+GradientMiddleColorFilterNight=0.157, 0.157, 0.157
 GradientMiddleColorFilterInteriorDay=1, 1, 1
 GradientMiddleColorFilterInteriorNight=1, 1, 1
 GradientHorizonIntensityDawn=1.0
@@ -130,11 +130,11 @@ GradientHorizonCurveNight=1.0
 GradientHorizonCurveInteriorDay=1.0
 GradientHorizonCurveInteriorNight=1.0
 GradientHorizonColorFilterDawn=1, 1, 1
-GradientHorizonColorFilterSunrise=1, 1, 1
-GradientHorizonColorFilterDay=1, 1, 1
-GradientHorizonColorFilterSunset=1, 1, 1
+GradientHorizonColorFilterSunrise=1, 0.706, 0.51
+GradientHorizonColorFilterDay=0.467, 0.839, 1
+GradientHorizonColorFilterSunset=1, 0.706, 0.451
 GradientHorizonColorFilterDusk=1, 1, 1
-GradientHorizonColorFilterNight=1, 1, 1
+GradientHorizonColorFilterNight=0.157, 0.157, 0.157
 GradientHorizonColorFilterInteriorDay=1, 1, 1
 GradientHorizonColorFilterInteriorNight=1, 1, 1
 CloudsIntensityDawn=1.0
@@ -142,7 +142,7 @@ CloudsIntensitySunrise=1.0
 CloudsIntensityDay=1.0
 CloudsIntensitySunset=1.0
 CloudsIntensityDusk=1.0
-CloudsIntensityNight=1.0
+CloudsIntensityNight=0.2
 CloudsIntensityInteriorDay=1.0
 CloudsIntensityInteriorNight=1.0
 CloudsCurveDawn=1.0
@@ -166,7 +166,7 @@ CloudsOpacitySunrise=1.0
 CloudsOpacityDay=1.0
 CloudsOpacitySunset=1.0
 CloudsOpacityDusk=1.0
-CloudsOpacityNight=1.0
+CloudsOpacityNight=0.85
 CloudsOpacityInteriorDay=1.0
 CloudsOpacityInteriorNight=1.0
 CloudsColorFilterDawn=1, 1, 1
@@ -186,9 +186,9 @@ CloudsEdgeMoonMultiplierNight=2.0
 CloudsEdgeMoonMultiplierInteriorDay=2.0
 CloudsEdgeMoonMultiplierInteriorNight=2.0
 SunIntensityDawn=1.0
-SunIntensitySunrise=1.0
-SunIntensityDay=1.0
-SunIntensitySunset=1.0
+SunIntensitySunrise=0.65
+SunIntensityDay=0.8
+SunIntensitySunset=0.65
 SunIntensityDusk=1.0
 SunIntensityNight=1.0
 SunIntensityInteriorDay=1.0
@@ -202,11 +202,11 @@ SunDesaturationNight=0.0
 SunDesaturationInteriorDay=0.0
 SunDesaturationInteriorNight=0.0
 SunColorFilterDawn=1, 1, 1
-SunColorFilterSunrise=1, 1, 1
-SunColorFilterDay=1, 1, 1
-SunColorFilterSunset=1, 1, 1
+SunColorFilterSunrise=1, 0.706, 0.51
+SunColorFilterDay=1, 0.941, 0.863
+SunColorFilterSunset=1, 0.706, 0.451
 SunColorFilterDusk=1, 1, 1
-SunColorFilterNight=1, 1, 1
+SunColorFilterNight=1, 0.471, 0.157
 SunColorFilterInteriorDay=1, 1, 1
 SunColorFilterInteriorNight=1, 1, 1
 MoonIntensityDawn=1.0
@@ -214,7 +214,7 @@ MoonIntensitySunrise=1.0
 MoonIntensityDay=1.0
 MoonIntensitySunset=1.0
 MoonIntensityDusk=1.0
-MoonIntensityNight=1.0
+MoonIntensityNight=4.0
 MoonIntensityInteriorDay=1.0
 MoonIntensityInteriorNight=1.0
 MoonDesaturationDawn=0.0
@@ -234,12 +234,12 @@ MoonColorFilterNight=1, 1, 1
 MoonColorFilterInteriorDay=1, 1, 1
 MoonColorFilterInteriorNight=1, 1, 1
 [ENVIRONMENT]
-DirectLightingIntensityDawn=1.0
-DirectLightingIntensitySunrise=1.0
-DirectLightingIntensityDay=1.0
-DirectLightingIntensitySunset=1.0
-DirectLightingIntensityDusk=1.0
-DirectLightingIntensityNight=1.0
+DirectLightingIntensityDawn=0.6
+DirectLightingIntensitySunrise=1.4
+DirectLightingIntensityDay=1.6
+DirectLightingIntensitySunset=1.4
+DirectLightingIntensityDusk=0.6
+DirectLightingIntensityNight=0.3
 DirectLightingIntensityInteriorDay=1.0
 DirectLightingIntensityInteriorNight=1.0
 DirectLightingCurveDawn=1.0
@@ -267,27 +267,27 @@ DirectLightingColorFilterAmountNight=0.0
 DirectLightingColorFilterAmountInteriorDay=0.0
 DirectLightingColorFilterAmountInteriorNight=0.0
 DirectLightingColorFilterDawn=1, 1, 1
-DirectLightingColorFilterSunrise=1, 1, 1
-DirectLightingColorFilterDay=1, 1, 1
-DirectLightingColorFilterSunset=1, 1, 1
+DirectLightingColorFilterSunrise=1, 0.706, 0.51
+DirectLightingColorFilterDay=1, 0.941, 0.863
+DirectLightingColorFilterSunset=1, 0.706, 0.451
 DirectLightingColorFilterDusk=1, 1, 1
-DirectLightingColorFilterNight=1, 1, 1
+DirectLightingColorFilterNight=0.667, 0.667, 0.667
 DirectLightingColorFilterInteriorDay=1, 1, 1
 DirectLightingColorFilterInteriorNight=1, 1, 1
-AmbientLightingIntensityDawn=1.0
-AmbientLightingIntensitySunrise=1.0
-AmbientLightingIntensityDay=1.0
-AmbientLightingIntensitySunset=1.0
-AmbientLightingIntensityDusk=1.0
-AmbientLightingIntensityNight=1.0
+AmbientLightingIntensityDawn=0.6
+AmbientLightingIntensitySunrise=0.7
+AmbientLightingIntensityDay=1.15
+AmbientLightingIntensitySunset=0.7
+AmbientLightingIntensityDusk=0.6
+AmbientLightingIntensityNight=0.3
 AmbientLightingIntensityInteriorDay=1.0
 AmbientLightingIntensityInteriorNight=1.0
-AmbientLightingDesaturationDawn=0.0
-AmbientLightingDesaturationSunrise=0.0
-AmbientLightingDesaturationDay=0.0
-AmbientLightingDesaturationSunset=0.0
-AmbientLightingDesaturationDusk=0.0
-AmbientLightingDesaturationNight=0.0
+AmbientLightingDesaturationDawn=1.0
+AmbientLightingDesaturationSunrise=1.0
+AmbientLightingDesaturationDay=1.0
+AmbientLightingDesaturationSunset=1.0
+AmbientLightingDesaturationDusk=1.0
+AmbientLightingDesaturationNight=1.0
 AmbientLightingDesaturationInteriorDay=0.0
 AmbientLightingDesaturationInteriorNight=0.0
 PointLightingIntensityDawn=1.0
@@ -371,11 +371,11 @@ FogColorFilterAmountNight=0.0
 FogColorFilterAmountInteriorDay=0.0
 FogColorFilterAmountInteriorNight=0.0
 FogColorFilterDawn=1, 1, 1
-FogColorFilterSunrise=1, 1, 1
-FogColorFilterDay=1, 1, 1
-FogColorFilterSunset=1, 1, 1
+FogColorFilterSunrise=1, 0.706, 0.51
+FogColorFilterDay=0.467, 0.839, 1
+FogColorFilterSunset=1, 0.706, 0.451
 FogColorFilterDusk=1, 1, 1
-FogColorFilterNight=1, 1, 1
+FogColorFilterNight=0.314, 0.314, 0.314
 FogColorFilterInteriorDay=1, 1, 1
 FogColorFilterInteriorNight=1, 1, 1
 ColorPowDawn=1.0
@@ -387,12 +387,12 @@ ColorPowNight=1.0
 ColorPowInteriorDay=1.0
 ColorPowInteriorNight=1.0
 [SKYLIGHTING]
-AmbientMinLevelDawn=0.1
-AmbientMinLevelSunrise=0.1
-AmbientMinLevelDay=0.1
-AmbientMinLevelSunset=0.1
-AmbientMinLevelDusk=0.1
-AmbientMinLevelNight=0.1
+AmbientMinLevelDawn=0.4
+AmbientMinLevelSunrise=0.62
+AmbientMinLevelDay=0.48
+AmbientMinLevelSunset=0.62
+AmbientMinLevelDusk=0.4
+AmbientMinLevelNight=0.4
 AmbientMinLevelInteriorDay=0.1
 AmbientMinLevelInteriorNight=0.1
 [SSAO_SSIL]
@@ -597,12 +597,12 @@ CurveNight=1.0
 CurveInteriorDay=1.0
 CurveInteriorNight=1.0
 [VOLUMETRICFOG]
-IntensityDawn=1.0
-IntensitySunrise=1.0
-IntensityDay=1.0
-IntensitySunset=1.0
-IntensityDusk=1.0
-IntensityNight=1.0
+IntensityDawn=0.8
+IntensitySunrise=0.8
+IntensityDay=0.8
+IntensitySunset=0.8
+IntensityDusk=0.2
+IntensityNight=0.53
 IntensityInteriorDay=1.0
 IntensityInteriorNight=1.0
 CurveDawn=1.0
@@ -613,12 +613,12 @@ CurveDusk=1.0
 CurveNight=1.0
 CurveInteriorDay=1.0
 CurveInteriorNight=1.0
-OpacityDawn=1.0
-OpacitySunrise=1.0
-OpacityDay=1.0
-OpacitySunset=1.0
-OpacityDusk=1.0
-OpacityNight=1.0
+OpacityDawn=0.2
+OpacitySunrise=0.2
+OpacityDay=0.2
+OpacitySunset=0.2
+OpacityDusk=0.3
+OpacityNight=0.2
 OpacityInteriorDay=1.0
 OpacityInteriorNight=1.0
 ColorFilterDawn=1, 1, 1
@@ -762,28 +762,28 @@ DistanceFadeNight=1.0
 DistanceFadeInteriorDay=1.0
 DistanceFadeInteriorNight=1.0
 [IMAGEBASEDLIGHTING]
-AdditiveAmountDawn=0.0
-AdditiveAmountSunrise=0.0
-AdditiveAmountDay=0.0
-AdditiveAmountSunset=0.0
-AdditiveAmountDusk=0.0
-AdditiveAmountNight=0.0
+AdditiveAmountDawn=0.1
+AdditiveAmountSunrise=0.1
+AdditiveAmountDay=0.1
+AdditiveAmountSunset=0.1
+AdditiveAmountDusk=0.1
+AdditiveAmountNight=0.1
 AdditiveAmountInteriorDay=0.0
 AdditiveAmountInteriorNight=0.0
-MultiplicativeAmountDawn=0.0
-MultiplicativeAmountSunrise=0.0
-MultiplicativeAmountDay=0.0
-MultiplicativeAmountSunset=0.0
-MultiplicativeAmountDusk=0.0
-MultiplicativeAmountNight=0.0
+MultiplicativeAmountDawn=0.15
+MultiplicativeAmountSunrise=0.15
+MultiplicativeAmountDay=0.15
+MultiplicativeAmountSunset=0.15
+MultiplicativeAmountDusk=0.15
+MultiplicativeAmountNight=0.15
 MultiplicativeAmountInteriorDay=0.0
 MultiplicativeAmountInteriorNight=0.0
-ReflectiveAmountDawn=0.0
-ReflectiveAmountSunrise=0.0
-ReflectiveAmountDay=0.0
-ReflectiveAmountSunset=0.0
-ReflectiveAmountDusk=0.0
-ReflectiveAmountNight=0.0
+ReflectiveAmountDawn=0.1
+ReflectiveAmountSunrise=0.1
+ReflectiveAmountDay=0.1
+ReflectiveAmountSunset=0.1
+ReflectiveAmountDusk=0.1
+ReflectiveAmountNight=0.1
 ReflectiveAmountInteriorDay=0.0
 ReflectiveAmountInteriorNight=0.0
 [RAIN]
@@ -905,12 +905,12 @@ CausticsAmountNight=3.0
 CausticsAmountInteriorDay=3.0
 CausticsAmountInteriorNight=3.0
 [GAMEVOLUMETRICRAYS]
-IntensityDawn=1.0
-IntensitySunrise=1.0
-IntensityDay=1.0
-IntensitySunset=1.0
-IntensityDusk=1.0
-IntensityNight=1.0
+IntensityDawn=0.0
+IntensitySunrise=0.0
+IntensityDay=0.0
+IntensitySunset=0.0
+IntensityDusk=0.0
+IntensityNight=0.0
 IntensityInteriorDay=1.0
 IntensityInteriorNight=1.0
 RangeFactorDawn=1.0
@@ -930,9 +930,9 @@ DesaturationNight=0.0
 DesaturationInteriorDay=0.0
 DesaturationInteriorNight=0.0
 ColorFilterDawn=1, 1, 1
-ColorFilterSunrise=1, 1, 1
-ColorFilterDay=1, 1, 1
-ColorFilterSunset=1, 1, 1
+ColorFilterSunrise=1, 0.706, 0.51
+ColorFilterDay=1, 0.941, 0.863
+ColorFilterSunset=1, 0.706, 0.451
 ColorFilterDusk=1, 1, 1
 ColorFilterNight=1, 1, 1
 ColorFilterInteriorDay=1, 1, 1
@@ -940,7 +940,7 @@ ColorFilterInteriorNight=1, 1, 1
 [RAYS]
 SunRaysMultiplierDawn=1.0
 SunRaysMultiplierSunrise=1.0
-SunRaysMultiplierDay=1.0
+SunRaysMultiplierDay=0.5
 SunRaysMultiplierSunset=1.0
 SunRaysMultiplierDusk=1.0
 SunRaysMultiplierNight=1.0
@@ -955,12 +955,12 @@ SkyColorAmountNight=0.0
 SkyColorAmountInteriorDay=0.0
 SkyColorAmountInteriorNight=0.0
 [VOLUMETRICRAYS]
-IntensityDawn=0.2
-IntensitySunrise=0.2
-IntensityDay=0.2
-IntensitySunset=0.2
-IntensityDusk=0.2
-IntensityNight=0.2
+IntensityDawn=0.3
+IntensitySunrise=0.3
+IntensityDay=0.3
+IntensitySunset=0.3
+IntensityDusk=0.3
+IntensityNight=0.3
 IntensityInteriorDay=0.2
 IntensityInteriorNight=0.2
 DensityDawn=1.0
