Finally on the path to greatness

--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1438,7 +1438,7 @@ Enable FXAA=false
 |===== Letterbox ======0
 |===== Camera Effects ======0
 |===== Color ======0
-|  Level Output Whitepoint=1.2
+|  Level Output Whitepoint=1.35
 |=== Show Curve Graph ====false
 |===== Letterbox ======0
 |===== Camera Effects ======0
@@ -1926,3 +1926,11 @@ Enable FXAA=false
 | 	Letterbox Color=0, 0, 0
 | 	Letterbox Distance=0.0
 |----- Color -----=0
+|  Horizontal Size=0.1
+|  Vertical Size=0.0
+|  Letterbox Rotation=0.0
+|  Letterbox Color=0, 0, 0
+|  Letterbox Distance=0.0
+| Enable Contrast Adaptive Sharpening=false
+|  Sharpening Contrast=0.0
+|  Sharpening Amount=1.0
