Big update. Moving on to cloudy and rain tomorrow.

--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -1,15 +1,15 @@
 [ENBBLOOM.FX]
-TECHNIQUE=4
+TECHNIQUE=2
 =0
-Sensitivity=0.3
-Threshold=0.9
-Soft Threshold=0.6
-Mask out Sky=0.3
+Sensitivity=0.85
+Threshold=0.35
+Soft Threshold=0.7
+Mask out Sky=0.2
 === Color ====0
-Intensity=0.3
+Intensity=1.0
 Saturation=1.0
 Tint=1, 1, 1
-Tonemap output=true
+Tonemap output=false
 === Shape ====0
 Samples=8
 Sigma=2.0
@@ -1276,3 +1276,4 @@ Select Dirt Texture=0
 Dirt Intensity=0.5
 Dirt Spread=1.0
 Dirt Tint=0.498, 0.498, 0.498
+Linear Slope=2.0
