--- a/enbseries/enbeffect.fx.ini
+++ b/enbseries/enbeffect.fx.ini
@@ -8,16 +8,16 @@ Color:  Exposure (Day)=1.0
 Color:  Exposure (Night)=0.2
 Color:  Exposure (Interior)=0.2
 Color:  Gamma (Day)=2.0
-Color:  Gamma (Night)=0.6
+Color:  Gamma (Night)=0.8
 Color:  Gamma (Interior)=1.0
 Color:  RGB Gamma (Day)=0.498, 0.498, 0.498
 Color:  RGB Gamma (Night)=0.498, 0.498, 0.498
 Color:  RGB Gamma (Interior)=0.498, 0.498, 0.498
 Color:  Color Temperature (Day)=6500.0
-Color:  Color Temperature (Night)=9000.0
+Color:  Color Temperature (Night)=9500.0
 Color:  Color Temperature (Interior)=6000.0
 Color:  Desaturation (Day)=0.8
-Color:  Desaturation (Night)=0.8
+Color:  Desaturation (Night)=1.0
 Color:  Desaturation (Interior)=1.0
 Color:  Resaturation (Day)=0.5
 Color:  Resaturation (Night)=0.3
@@ -52,3 +52,4 @@ AISS:  Max Tint Color=1.0
 AISS:  Tint Impact=1.0
 AISS:  Min Tint=0.0
 AISS:  Max Tint=0.4
+Debug:  Alternate Bloom Mixing=true
