--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1931,6 +1931,6 @@ Enable FXAA=false
 |  Letterbox Rotation=0.0
 |  Letterbox Color=0, 0, 0
 |  Letterbox Distance=0.0
-| Enable Contrast Adaptive Sharpening=true
+| Enable Contrast Adaptive Sharpening=false
 |  Sharpening Contrast=0.0
-|  Sharpening Amount=0.3
+|  Sharpening Amount=1.0
