--- a/enbseries/enbeffectprepass.fx.ini
+++ b/enbseries/enbeffectprepass.fx.ini
@@ -849,3 +849,6 @@ Show mask=false
 |  FXAA Edge Threshhold Min=0.0
 |  FXAA Subpix Cap=0.75
 |  FXAA Subpix Trim=0.12
+|  HDR Gamma=1.0
+|  Glow Threshold=0.1
+|  Darken around Sun=0.0
