--- a/enbseries/Weather/SkyrimCloudy.ini
+++ b/enbseries/Weather/SkyrimCloudy.ini
@@ -49,12 +49,12 @@ AuroraBorealisCurveDusk=1.0
 AuroraBorealisCurveNight=1.0
 AuroraBorealisCurveInteriorDay=1.0
 AuroraBorealisCurveInteriorNight=1.0
-GradientIntensityDawn=1.0
-GradientIntensitySunrise=1.0
-GradientIntensityDay=1.4
-GradientIntensitySunset=1.000001
-GradientIntensityDusk=1.0
-GradientIntensityNight=0.7
+GradientIntensityDawn=0.9
+GradientIntensitySunrise=2.1
+GradientIntensityDay=2.3
+GradientIntensitySunset=2.100001
+GradientIntensityDusk=0.9
+GradientIntensityNight=0.900001
 GradientIntensityInteriorDay=1.0
 GradientIntensityInteriorNight=1.0
 GradientDesaturationDawn=0.0
@@ -73,20 +73,20 @@ GradientTopIntensityDusk=1.0
 GradientTopIntensityNight=1.0
 GradientTopIntensityInteriorDay=1.0
 GradientTopIntensityInteriorNight=1.0
-GradientTopCurveDawn=1.0
-GradientTopCurveSunrise=1.0
-GradientTopCurveDay=1.0
-GradientTopCurveSunset=1.0
-GradientTopCurveDusk=1.0
+GradientTopCurveDawn=1.2
+GradientTopCurveSunrise=1.2
+GradientTopCurveDay=1.2
+GradientTopCurveSunset=1.2
+GradientTopCurveDusk=1.2
 GradientTopCurveNight=1.0
 GradientTopCurveInteriorDay=1.0
 GradientTopCurveInteriorNight=1.0
 GradientTopColorFilterDawn=1, 1, 1
-GradientTopColorFilterSunrise=0.651, 0.769, 0.816
-GradientTopColorFilterDay=0.467, 0.839, 1
-GradientTopColorFilterSunset=0.627, 0.776, 0.839
+GradientTopColorFilterSunrise=0.341, 0.529, 0.694
+GradientTopColorFilterDay=0.0196, 0.584, 0.827
+GradientTopColorFilterSunset=0.341, 0.529, 0.694
 GradientTopColorFilterDusk=1, 1, 1
-GradientTopColorFilterNight=0.314, 0.314, 0.314
+GradientTopColorFilterNight=1, 1, 1
 GradientTopColorFilterInteriorDay=1, 1, 1
 GradientTopColorFilterInteriorNight=1, 1, 1
 GradientMiddleIntensityDawn=1.0
@@ -97,20 +97,20 @@ GradientMiddleIntensityDusk=1.0
 GradientMiddleIntensityNight=1.0
 GradientMiddleIntensityInteriorDay=1.0
 GradientMiddleIntensityInteriorNight=1.0
-GradientMiddleCurveDawn=1.0
-GradientMiddleCurveSunrise=1.0
-GradientMiddleCurveDay=1.0
-GradientMiddleCurveSunset=1.0
-GradientMiddleCurveDusk=1.0
+GradientMiddleCurveDawn=1.2
+GradientMiddleCurveSunrise=1.2
+GradientMiddleCurveDay=1.2
+GradientMiddleCurveSunset=1.2
+GradientMiddleCurveDusk=1.2
 GradientMiddleCurveNight=1.0
 GradientMiddleCurveInteriorDay=1.0
 GradientMiddleCurveInteriorNight=1.0
 GradientMiddleColorFilterDawn=1, 1, 1
-GradientMiddleColorFilterSunrise=0.651, 0.769, 0.816
-GradientMiddleColorFilterDay=0.467, 0.839, 1
-GradientMiddleColorFilterSunset=0.627, 0.776, 0.839
+GradientMiddleColorFilterSunrise=0.522, 0.671, 0.804
+GradientMiddleColorFilterDay=0.118, 0.722, 0.98
+GradientMiddleColorFilterSunset=0.522, 0.671, 0.804
 GradientMiddleColorFilterDusk=1, 1, 1
-GradientMiddleColorFilterNight=0.314, 0.314, 0.314
+GradientMiddleColorFilterNight=1, 1, 1
 GradientMiddleColorFilterInteriorDay=1, 1, 1
 GradientMiddleColorFilterInteriorNight=1, 1, 1
 GradientHorizonIntensityDawn=1.0
@@ -121,28 +121,28 @@ GradientHorizonIntensityDusk=1.0
 GradientHorizonIntensityNight=1.0
 GradientHorizonIntensityInteriorDay=1.0
 GradientHorizonIntensityInteriorNight=1.0
-GradientHorizonCurveDawn=1.0
-GradientHorizonCurveSunrise=1.0
-GradientHorizonCurveDay=1.0
-GradientHorizonCurveSunset=1.0
-GradientHorizonCurveDusk=1.0
+GradientHorizonCurveDawn=1.2
+GradientHorizonCurveSunrise=1.2
+GradientHorizonCurveDay=1.2
+GradientHorizonCurveSunset=1.2
+GradientHorizonCurveDusk=1.2
 GradientHorizonCurveNight=1.0
 GradientHorizonCurveInteriorDay=1.0
 GradientHorizonCurveInteriorNight=1.0
 GradientHorizonColorFilterDawn=1, 1, 1
 GradientHorizonColorFilterSunrise=1, 0.706, 0.51
-GradientHorizonColorFilterDay=0.467, 0.839, 1
+GradientHorizonColorFilterDay=0.404, 0.718, 0.851
 GradientHorizonColorFilterSunset=1, 0.706, 0.451
 GradientHorizonColorFilterDusk=1, 1, 1
-GradientHorizonColorFilterNight=0.314, 0.314, 0.314
+GradientHorizonColorFilterNight=1, 1, 1
 GradientHorizonColorFilterInteriorDay=1, 1, 1
 GradientHorizonColorFilterInteriorNight=1, 1, 1
-CloudsIntensityDawn=1.0
-CloudsIntensitySunrise=1.0
-CloudsIntensityDay=1.0
-CloudsIntensitySunset=1.0
-CloudsIntensityDusk=1.0
-CloudsIntensityNight=0.200001
+CloudsIntensityDawn=0.9
+CloudsIntensitySunrise=2.1
+CloudsIntensityDay=2.3
+CloudsIntensitySunset=2.1
+CloudsIntensityDusk=0.9
+CloudsIntensityNight=0.900001
 CloudsIntensityInteriorDay=1.0
 CloudsIntensityInteriorNight=1.0
 CloudsCurveDawn=1.0
@@ -214,7 +214,7 @@ MoonIntensitySunrise=1.0
 MoonIntensityDay=1.0
 MoonIntensitySunset=1.0
 MoonIntensityDusk=1.0
-MoonIntensityNight=4.0
+MoonIntensityNight=2.2
 MoonIntensityInteriorDay=1.0
 MoonIntensityInteriorNight=1.0
 MoonDesaturationDawn=0.0
@@ -234,12 +234,12 @@ MoonColorFilterNight=1, 1, 1
 MoonColorFilterInteriorDay=1, 1, 1
 MoonColorFilterInteriorNight=1, 1, 1
 [ENVIRONMENT]
-DirectLightingIntensityDawn=0.7
-DirectLightingIntensitySunrise=1.4
-DirectLightingIntensityDay=1.6
-DirectLightingIntensitySunset=1.4
-DirectLightingIntensityDusk=0.7
-DirectLightingIntensityNight=0.5
+DirectLightingIntensityDawn=0.9
+DirectLightingIntensitySunrise=2.1
+DirectLightingIntensityDay=2.3
+DirectLightingIntensitySunset=2.1
+DirectLightingIntensityDusk=0.9
+DirectLightingIntensityNight=0.9
 DirectLightingIntensityInteriorDay=1.0
 DirectLightingIntensityInteriorNight=1.0
 DirectLightingCurveDawn=1.0
@@ -271,15 +271,15 @@ DirectLightingColorFilterSunrise=1, 0.706, 0.51
 DirectLightingColorFilterDay=1, 0.941, 0.863
 DirectLightingColorFilterSunset=1, 0.706, 0.451
 DirectLightingColorFilterDusk=1, 1, 1
-DirectLightingColorFilterNight=0.667, 0.667, 0.667
+DirectLightingColorFilterNight=0.271, 0.729, 0.929
 DirectLightingColorFilterInteriorDay=1, 1, 1
 DirectLightingColorFilterInteriorNight=1, 1, 1
-AmbientLightingIntensityDawn=0.7
-AmbientLightingIntensitySunrise=0.7
-AmbientLightingIntensityDay=1.15
-AmbientLightingIntensitySunset=0.7
-AmbientLightingIntensityDusk=0.7
-AmbientLightingIntensityNight=0.2
+AmbientLightingIntensityDawn=0.9
+AmbientLightingIntensitySunrise=0.9
+AmbientLightingIntensityDay=1.2
+AmbientLightingIntensitySunset=0.9
+AmbientLightingIntensityDusk=0.9
+AmbientLightingIntensityNight=0.3
 AmbientLightingIntensityInteriorDay=1.0
 AmbientLightingIntensityInteriorNight=1.0
 AmbientLightingDesaturationDawn=1.0
@@ -331,18 +331,18 @@ SpecularPowerMultiplierNight=1.0
 SpecularPowerMultiplierInteriorDay=1.0
 SpecularPowerMultiplierInteriorNight=1.0
 FogColorMultiplierDawn=1.0
-FogColorMultiplierSunrise=1.0
-FogColorMultiplierDay=1.0
-FogColorMultiplierSunset=1.0
-FogColorMultiplierDusk=1.0
+FogColorMultiplierSunrise=2.0
+FogColorMultiplierDay=2.0
+FogColorMultiplierSunset=2.0
+FogColorMultiplierDusk=2.0
 FogColorMultiplierNight=1.0
 FogColorMultiplierInteriorDay=1.0
 FogColorMultiplierInteriorNight=1.0
 FogColorCurveDawn=1.0
-FogColorCurveSunrise=1.0
-FogColorCurveDay=1.0
-FogColorCurveSunset=1.0
-FogColorCurveDusk=1.0
+FogColorCurveSunrise=0.65
+FogColorCurveDay=0.8
+FogColorCurveSunset=0.8
+FogColorCurveDusk=0.8
 FogColorCurveNight=1.0
 FogColorCurveInteriorDay=1.0
 FogColorCurveInteriorNight=1.0
@@ -372,10 +372,10 @@ FogColorFilterAmountInteriorDay=0.0
 FogColorFilterAmountInteriorNight=0.0
 FogColorFilterDawn=1, 1, 1
 FogColorFilterSunrise=1, 0.706, 0.51
-FogColorFilterDay=0.467, 0.839, 1
+FogColorFilterDay=0.404, 0.718, 0.851
 FogColorFilterSunset=1, 0.706, 0.451
 FogColorFilterDusk=1, 1, 1
-FogColorFilterNight=0.137, 0.137, 0.137
+FogColorFilterNight=0.471, 0.471, 0.471
 FogColorFilterInteriorDay=1, 1, 1
 FogColorFilterInteriorNight=1, 1, 1
 ColorPowDawn=1.0
@@ -387,12 +387,12 @@ ColorPowNight=1.0
 ColorPowInteriorDay=1.0
 ColorPowInteriorNight=1.0
 [SKYLIGHTING]
-AmbientMinLevelDawn=0.62
+AmbientMinLevelDawn=1.0
 AmbientMinLevelSunrise=0.62
-AmbientMinLevelDay=0.48
+AmbientMinLevelDay=0.62
 AmbientMinLevelSunset=0.62
-AmbientMinLevelDusk=0.62
-AmbientMinLevelNight=0.4
+AmbientMinLevelDusk=1.0
+AmbientMinLevelNight=1.0
 AmbientMinLevelInteriorDay=0.1
 AmbientMinLevelInteriorNight=0.1
 [SSAO_SSIL]
@@ -597,12 +597,12 @@ CurveNight=1.0
 CurveInteriorDay=1.0
 CurveInteriorNight=1.0
 [VOLUMETRICFOG]
-IntensityDawn=0.8
-IntensitySunrise=0.8
-IntensityDay=0.8
-IntensitySunset=0.8
-IntensityDusk=0.2
-IntensityNight=0.53
+IntensityDawn=1.0
+IntensitySunrise=2.6
+IntensityDay=1.6
+IntensitySunset=2.0
+IntensityDusk=2.0
+IntensityNight=1.0
 IntensityInteriorDay=1.0
 IntensityInteriorNight=1.0
 CurveDawn=1.0
@@ -613,12 +613,12 @@ CurveDusk=1.0
 CurveNight=1.0
 CurveInteriorDay=1.0
 CurveInteriorNight=1.0
-OpacityDawn=0.2
-OpacitySunrise=0.2
-OpacityDay=0.2
-OpacitySunset=0.2
-OpacityDusk=0.3
-OpacityNight=0.2
+OpacityDawn=1.0
+OpacitySunrise=1.0
+OpacityDay=1.0
+OpacitySunset=1.0
+OpacityDusk=1.0
+OpacityNight=1.0
 OpacityInteriorDay=1.0
 OpacityInteriorNight=1.0
 ColorFilterDawn=1, 1, 1
@@ -770,12 +770,12 @@ AdditiveAmountDusk=0.1
 AdditiveAmountNight=0.1
 AdditiveAmountInteriorDay=0.0
 AdditiveAmountInteriorNight=0.0
-MultiplicativeAmountDawn=0.15
-MultiplicativeAmountSunrise=0.15
-MultiplicativeAmountDay=0.15
-MultiplicativeAmountSunset=0.15
-MultiplicativeAmountDusk=0.15
-MultiplicativeAmountNight=0.15
+MultiplicativeAmountDawn=0.3
+MultiplicativeAmountSunrise=0.3
+MultiplicativeAmountDay=0.3
+MultiplicativeAmountSunset=0.3
+MultiplicativeAmountDusk=0.3
+MultiplicativeAmountNight=0.3
 MultiplicativeAmountInteriorDay=0.0
 MultiplicativeAmountInteriorNight=0.0
 ReflectiveAmountDawn=0.1
