Finished HDR shader. Added more bloom settings

--- a/enbseries/enbeffect.fx.ini
+++ b/enbseries/enbeffect.fx.ini
@@ -53,3 +53,9 @@ AISS:  Tint Impact=1.0
 AISS:  Min Tint=0.0
 AISS:  Max Tint=0.4
 Debug:  Alternate Bloom Mixing=true
+««« Bloom »»»=0
+Bloom:  Bloom Spread Threshold=0.0
+Bloom:  Bloom Spread Power=0.0
+Bloom:  Bloom Glow Threshold=0.0
+Bloom:  Bloom Glow Power=0.0
+Bloom:  Direct Bloom mix=0.25
