--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1342,16 +1342,16 @@ Enable FXAA=false
 | Letterbox Color=0, 0, 0
 | Letterbox Distance=0.0
 |===== Camera Effects ======0
-| Enable Lens Distortion=false
+| Enable Lens Distortion=true
 |  Distortion Amount=-10
-| Enable Vingette=false
+| Enable Vingette=true
 |  Vingette Intesity=0.1
 | Enable Grain=false
 |  Grain Amount=50
 |  Grain Roughness=1
-| Enable Chromatic Aberration=false
-|  Aberration Strength=0.3
-|  Aberration Curve=1.0
+| Enable Chromatic Aberration=true
+|  Aberration Strength=1.0
+|  Aberration Curve=2.0
 | Enable FXAA=false
 |===== Color ======0
 | Image Saturation:=0
@@ -1932,5 +1932,5 @@ Enable FXAA=false
 |  Letterbox Color=0, 0, 0
 |  Letterbox Distance=0.0
 | Enable Contrast Adaptive Sharpening=false
-|  Sharpening Contrast=0.0
+|  Sharpening Contrast=0.2
 |  Sharpening Amount=1.0
