--- a/enbseries/enbeffectprepass.fx.ini
+++ b/enbseries/enbeffectprepass.fx.ini
@@ -23,7 +23,7 @@ Show mask=false
 | Blur Shadows=0.2
 | HDR Tone=0.2
 |===== Atmosphere ======0
-| Enable Atmosphere=false
+| Enable Atmosphere=true
 | Air Density (Exterior)=0.0
 | Air Density (Interior)=0.2
 | Air Tint (Exterior)=1, 1, 1
@@ -821,7 +821,7 @@ Show mask=false
 | FXAA Subpix Trim=0.12
 |----- Sun -----=0
 | Enable Glow=true
-|  Glow Strength=1.0
+|  Glow Strength=2.0
 |  Glow Curve=2.0
 |  Glow Tint=0.5, 0.498, 0.498
 |  Calibrate Shadow Range=0.18
@@ -837,8 +837,8 @@ Show mask=false
 |  Air Start (Exterior)=0.0
 |  Air Start (Interior)=0.0
 |  Show mask=false
-|  Sharpening Offset=1.0
-|  Sharpening Strength=0.3
+|  Sharpening Offset=0.8
+|  Sharpening Strength=1.0
 |  Sharpening Fadeout=3.0
 |  Ignore Skin=true
 |  Skin Gamma=1.0
@@ -849,6 +849,9 @@ Show mask=false
 |  FXAA Edge Threshhold Min=0.0
 |  FXAA Subpix Cap=0.75
 |  FXAA Subpix Trim=0.12
-|  HDR Gamma=1.0
-|  Glow Threshold=0.1
-|  Darken around Sun=0.0
+|  HDR Gamma=0.9
+|  Glow Threshold=0.3
+|  Darken around Sun=0.3
+|  HDR Balance=0.7
+|  HDR Mix=0.2
+|  HDR Curve=1.0
