get ready for coom

--- a/enbseries/Weather/SkyrimCloudy.ini
+++ b/enbseries/Weather/SkyrimCloudy.ini
@@ -22,7 +22,7 @@ StarsIntensitySunrise=1.0
 StarsIntensityDay=1.0
 StarsIntensitySunset=1.0
 StarsIntensityDusk=1.0
-StarsIntensityNight=2.0
+StarsIntensityNight=0.04
 StarsIntensityInteriorDay=1.0
 StarsIntensityInteriorNight=1.0
 StarsCurveDawn=1.0
@@ -54,15 +54,15 @@ GradientIntensitySunrise=2.1
 GradientIntensityDay=2.3
 GradientIntensitySunset=2.100001
 GradientIntensityDusk=0.9
-GradientIntensityNight=0.900001
+GradientIntensityNight=0.200001
 GradientIntensityInteriorDay=1.0
 GradientIntensityInteriorNight=1.0
 GradientDesaturationDawn=0.0
 GradientDesaturationSunrise=0.0
-GradientDesaturationDay=0.0
+GradientDesaturationDay=0.2
 GradientDesaturationSunset=0.0
 GradientDesaturationDusk=0.0
-GradientDesaturationNight=0.0
+GradientDesaturationNight=0.25
 GradientDesaturationInteriorDay=0.0
 GradientDesaturationInteriorNight=0.0
 GradientTopIntensityDawn=1.0
@@ -142,7 +142,7 @@ CloudsIntensitySunrise=2.1
 CloudsIntensityDay=2.3
 CloudsIntensitySunset=2.1
 CloudsIntensityDusk=0.9
-CloudsIntensityNight=0.900001
+CloudsIntensityNight=0.1
 CloudsIntensityInteriorDay=1.0
 CloudsIntensityInteriorNight=1.0
 CloudsCurveDawn=1.0
@@ -166,7 +166,7 @@ CloudsOpacitySunrise=1.0
 CloudsOpacityDay=1.0
 CloudsOpacitySunset=1.0
 CloudsOpacityDusk=1.0
-CloudsOpacityNight=1.0
+CloudsOpacityNight=0.77
 CloudsOpacityInteriorDay=1.0
 CloudsOpacityInteriorNight=1.0
 CloudsColorFilterDawn=1, 1, 1
@@ -182,13 +182,13 @@ CloudsEdgeMoonMultiplierSunrise=2.0
 CloudsEdgeMoonMultiplierDay=2.0
 CloudsEdgeMoonMultiplierSunset=2.0
 CloudsEdgeMoonMultiplierDusk=2.0
-CloudsEdgeMoonMultiplierNight=2.0
+CloudsEdgeMoonMultiplierNight=6.0
 CloudsEdgeMoonMultiplierInteriorDay=2.0
 CloudsEdgeMoonMultiplierInteriorNight=2.0
 SunIntensityDawn=1.0
-SunIntensitySunrise=0.65
-SunIntensityDay=0.8
-SunIntensitySunset=0.65
+SunIntensitySunrise=1.0
+SunIntensityDay=1.0
+SunIntensitySunset=1.0
 SunIntensityDusk=1.0
 SunIntensityNight=1.0
 SunIntensityInteriorDay=1.0
@@ -214,7 +214,7 @@ MoonIntensitySunrise=1.0
 MoonIntensityDay=1.0
 MoonIntensitySunset=1.0
 MoonIntensityDusk=1.0
-MoonIntensityNight=2.2
+MoonIntensityNight=1.6
 MoonIntensityInteriorDay=1.0
 MoonIntensityInteriorNight=1.0
 MoonDesaturationDawn=0.0
@@ -239,7 +239,7 @@ DirectLightingIntensitySunrise=2.1
 DirectLightingIntensityDay=2.3
 DirectLightingIntensitySunset=2.1
 DirectLightingIntensityDusk=0.9
-DirectLightingIntensityNight=0.9
+DirectLightingIntensityNight=0.12
 DirectLightingIntensityInteriorDay=1.0
 DirectLightingIntensityInteriorNight=1.0
 DirectLightingCurveDawn=1.0
@@ -271,23 +271,23 @@ DirectLightingColorFilterSunrise=1, 0.706, 0.51
 DirectLightingColorFilterDay=1, 0.941, 0.863
 DirectLightingColorFilterSunset=1, 0.706, 0.451
 DirectLightingColorFilterDusk=1, 1, 1
-DirectLightingColorFilterNight=0.271, 0.729, 0.929
+DirectLightingColorFilterNight=1, 0.667, 0.49
 DirectLightingColorFilterInteriorDay=1, 1, 1
 DirectLightingColorFilterInteriorNight=1, 1, 1
-AmbientLightingIntensityDawn=0.9
-AmbientLightingIntensitySunrise=0.9
-AmbientLightingIntensityDay=1.2
-AmbientLightingIntensitySunset=0.9
-AmbientLightingIntensityDusk=0.9
-AmbientLightingIntensityNight=0.3
+AmbientLightingIntensityDawn=0.2
+AmbientLightingIntensitySunrise=0.2
+AmbientLightingIntensityDay=0.66
+AmbientLightingIntensitySunset=0.2
+AmbientLightingIntensityDusk=0.2
+AmbientLightingIntensityNight=0.04
 AmbientLightingIntensityInteriorDay=1.0
 AmbientLightingIntensityInteriorNight=1.0
-AmbientLightingDesaturationDawn=1.0
-AmbientLightingDesaturationSunrise=1.0
-AmbientLightingDesaturationDay=1.0
-AmbientLightingDesaturationSunset=1.0
-AmbientLightingDesaturationDusk=1.0
-AmbientLightingDesaturationNight=1.0
+AmbientLightingDesaturationDawn=0.0
+AmbientLightingDesaturationSunrise=0.0
+AmbientLightingDesaturationDay=0.0
+AmbientLightingDesaturationSunset=0.0
+AmbientLightingDesaturationDusk=0.0
+AmbientLightingDesaturationNight=0.0
 AmbientLightingDesaturationInteriorDay=0.0
 AmbientLightingDesaturationInteriorNight=0.0
 PointLightingIntensityDawn=1.0
@@ -303,7 +303,7 @@ PointLightingCurveSunrise=1.0
 PointLightingCurveDay=1.0
 PointLightingCurveSunset=1.0
 PointLightingCurveDusk=1.0
-PointLightingCurveNight=1.0
+PointLightingCurveNight=1.3
 PointLightingCurveInteriorDay=1.0
 PointLightingCurveInteriorNight=1.0
 PointLightingDesaturationDawn=0.0
@@ -375,7 +375,7 @@ FogColorFilterSunrise=1, 0.706, 0.51
 FogColorFilterDay=0.404, 0.718, 0.851
 FogColorFilterSunset=1, 0.706, 0.451
 FogColorFilterDusk=1, 1, 1
-FogColorFilterNight=0.471, 0.471, 0.471
+FogColorFilterNight=0, 0, 0
 FogColorFilterInteriorDay=1, 1, 1
 FogColorFilterInteriorNight=1, 1, 1
 ColorPowDawn=1.0
@@ -598,17 +598,17 @@ CurveInteriorDay=1.0
 CurveInteriorNight=1.0
 [VOLUMETRICFOG]
 IntensityDawn=1.0
-IntensitySunrise=2.6
-IntensityDay=1.6
-IntensitySunset=2.0
+IntensitySunrise=1.56
+IntensityDay=1.56
+IntensitySunset=1.56
 IntensityDusk=2.0
-IntensityNight=1.0
+IntensityNight=0.09
 IntensityInteriorDay=1.0
 IntensityInteriorNight=1.0
 CurveDawn=1.0
-CurveSunrise=1.0
-CurveDay=1.0
-CurveSunset=1.0
+CurveSunrise=1.5
+CurveDay=1.5
+CurveSunset=1.5
 CurveDusk=1.0
 CurveNight=1.0
 CurveInteriorDay=1.0
@@ -652,7 +652,7 @@ IntensitySunrise=1.0
 IntensityDay=1.0
 IntensitySunset=1.0
 IntensityDusk=1.0
-IntensityNight=1.0
+IntensityNight=0.03
 IntensityInteriorDay=1.0
 IntensityInteriorNight=1.0
 LightingInfluenceDawn=0.5
@@ -762,28 +762,28 @@ DistanceFadeNight=1.0
 DistanceFadeInteriorDay=1.0
 DistanceFadeInteriorNight=1.0
 [IMAGEBASEDLIGHTING]
-AdditiveAmountDawn=0.1
-AdditiveAmountSunrise=0.1
-AdditiveAmountDay=0.1
-AdditiveAmountSunset=0.1
-AdditiveAmountDusk=0.1
-AdditiveAmountNight=0.1
+AdditiveAmountDawn=0.0
+AdditiveAmountSunrise=0.0
+AdditiveAmountDay=0.0
+AdditiveAmountSunset=0.0
+AdditiveAmountDusk=0.0
+AdditiveAmountNight=0.0
 AdditiveAmountInteriorDay=0.0
 AdditiveAmountInteriorNight=0.0
-MultiplicativeAmountDawn=0.3
-MultiplicativeAmountSunrise=0.3
-MultiplicativeAmountDay=0.3
-MultiplicativeAmountSunset=0.3
-MultiplicativeAmountDusk=0.3
-MultiplicativeAmountNight=0.3
+MultiplicativeAmountDawn=0.66
+MultiplicativeAmountSunrise=0.66
+MultiplicativeAmountDay=0.66
+MultiplicativeAmountSunset=0.66
+MultiplicativeAmountDusk=0.66
+MultiplicativeAmountNight=4.0
 MultiplicativeAmountInteriorDay=0.0
 MultiplicativeAmountInteriorNight=0.0
-ReflectiveAmountDawn=0.1
-ReflectiveAmountSunrise=0.1
-ReflectiveAmountDay=0.1
-ReflectiveAmountSunset=0.1
-ReflectiveAmountDusk=0.1
-ReflectiveAmountNight=0.1
+ReflectiveAmountDawn=0.05
+ReflectiveAmountSunrise=0.05
+ReflectiveAmountDay=0.05
+ReflectiveAmountSunset=0.05
+ReflectiveAmountDusk=0.05
+ReflectiveAmountNight=0.25
 ReflectiveAmountInteriorDay=0.0
 ReflectiveAmountInteriorNight=0.0
 [RAIN]
