--- a/enbseries/enbbloom.fx.ini
+++ b/enbseries/enbbloom.fx.ini
@@ -1,12 +1,12 @@
 [ENBBLOOM.FX]
-TECHNIQUE=1
+TECHNIQUE=4
 =0
-Sensitivity=0.85
-Threshold=0.35
+Sensitivity=2.5
+Threshold=0.0
 Soft Threshold=0.7
-Mask out Sky=0.2
+Mask out Sky=0.85
 === Color ====0
-Intensity=1.0
+Intensity=-3.75
 Saturation=1.0
 Tint=1, 1, 1
 Tonemap output=false
@@ -1265,7 +1265,7 @@ Sigma=2.0
 ----- Color -----=0
 ----- Shape -----=0
 ----- Adaptation -----=0
-Enable Adaptation=true
+Enable Adaptation=false
 Adaptation Samples=8
 Adaptation Impact=2.0
 Min Adaptation=0.0
@@ -1276,4 +1276,4 @@ Select Dirt Texture=0
 Dirt Intensity=0.5
 Dirt Spread=1.0
 Dirt Tint=0.498, 0.498, 0.498
-Linear Slope=2.0
+Linear Slope=1.0
