--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1342,14 +1342,14 @@ Enable FXAA=false
 | Letterbox Color=0, 0, 0
 | Letterbox Distance=0.0
 |===== Camera Effects ======0
-| Enable Lens Distortion=true
+| Enable Lens Distortion=false
 |  Distortion Amount=-10
-| Enable Vingette=true
+| Enable Vingette=false
 |  Vingette Intesity=0.1
 | Enable Grain=false
 |  Grain Amount=50
 |  Grain Roughness=1
-| Enable Chromatic Aberration=true
+| Enable Chromatic Aberration=false
 |  Aberration Strength=1.0
 |  Aberration Curve=2.0
 | Enable FXAA=false
