sunrise, dawn, dusk

--- a/enbseries.ini
+++ b/enbseries.ini
@@ -380,8 +380,8 @@ PointLightingCurveDay=1.0
 PointLightingCurveSunset=1.0
 PointLightingCurveDusk=1.0
 PointLightingCurveNight=1.0
-PointLightingCurveInteriorDay=1.2
-PointLightingCurveInteriorNight=1.2
+PointLightingCurveInteriorDay=1.65
+PointLightingCurveInteriorNight=1.65
 PointLightingDesaturationDawn=0.0
 PointLightingDesaturationSunrise=0.0
 PointLightingDesaturationDay=0.0
@@ -679,6 +679,7 @@ FakeLightDusk=0.0
 FakeLightNight=0.0
 FakeLightInteriorDay=0.0
 FakeLightInteriorNight=0.0
+EnableInterior=false
 [SKINSPECULAR]
 IgnoreWeatherSystem=true
 IgnoreWeatherSystemInterior=false
@@ -966,6 +967,7 @@ BrightnessDusk=1.0
 BrightnessNight=1.0
 BrightnessInteriorDay=1.0
 BrightnessInteriorNight=1.0
+UseOriginalUVAtlas=false
 [SNOW]
 IgnoreWeatherSystem=false
 IgnoreWeatherSystemInterior=false
