--- a/enbseries.ini
+++ b/enbseries.ini
@@ -1112,40 +1112,31 @@ Power=1.0
 PowerInterior=1.0
 [WATER]
 IgnoreWeatherSystem=true
-IgnoreWeatherSystemInterior=false
-DisableDistantReflection=true
-EnableTemporalAA=true
 EnableDispersion=true
 EnableCaustics=true
-EnableParallax=true
-EnableShadow=true
-EnableVolumetricShadow=true
-EnableCloudsShadow=true
-EnableLighting=true
+EnableParallax=false
 EnableSelfReflection=true
-EnableDisplacement=true
-EnableTessellation=true
-DisplacementQuality=-1
-TessellationQuality=-1
-VolumetricShadowQuality=0
+EnableDisplacement=false
+DisplacementQuality=1
 ReflectionAmount=1.0
-FresnelMultiplier=0.35
-FresnelMin=0.0
-FresnelMax=1.0
-DispersionAmount=0.35
-CausticsAmount=1.0
-SunSpecularMultiplier=2.0
-SunScatteringMultiplier=0.75
-SunLightingMultiplier=0.3
-WetMultiplier=1.0
-WavesAmplitudeDawn=0.5
-WavesAmplitudeSunrise=0.75
-WavesAmplitudeDay=1.0
-WavesAmplitudeSunset=0.75
-WavesAmplitudeDusk=0.5
-WavesAmplitudeNight=0.25
+DispersionAmount=0.07
+CausticsAmount=0.33
+SunSpecularMultiplier=1.0
+SunScatteringMultiplier=1.0
+WavesAmplitudeDawn=0.26
+WavesAmplitudeSunrise=0.26
+WavesAmplitudeDay=0.26
+WavesAmplitudeSunset=0.26
+WavesAmplitudeDusk=0.26
+WavesAmplitudeNight=0.26
 WavesAmplitudeInteriorDay=1.0
 WavesAmplitudeInteriorNight=1.0
+Muddiness=0.96
+EnableTemporalAA=true
+EnableTessellation=true
+TessellationQuality=1
+DisableDistantReflection=true
+FresnelMultiplier=0.87
 BrightnessDawn=1.0
 BrightnessSunrise=1.0
 BrightnessDay=1.0
@@ -1154,7 +1145,16 @@ BrightnessDusk=1.0
 BrightnessNight=1.0
 BrightnessInteriorDay=1.0
 BrightnessInteriorNight=1.0
-Muddiness=0.9
+EnableShadow=false
+EnableVolumetricShadow=false
+EnableCloudsShadow=true
+EnableLighting=true
+VolumetricShadowQuality=1
+FresnelMin=0.0
+FresnelMax=1.0
+SunLightingMultiplier=0.3
+WetMultiplier=1.0
+IgnoreWeatherSystemInterior=false
 [UNDERWATER]
 IgnoreWeatherSystem=true
 IgnoreWeatherSystemInterior=false
