--- a/enbseries/Weather/SkyrimClear.ini
+++ b/enbseries/Weather/SkyrimClear.ini
@@ -59,7 +59,7 @@ GradientIntensityInteriorDay=1.0
 GradientIntensityInteriorNight=1.0
 GradientDesaturationDawn=0.25
 GradientDesaturationSunrise=0.0
-GradientDesaturationDay=0.12
+GradientDesaturationDay=0.0
 GradientDesaturationSunset=0.0
 GradientDesaturationDusk=0.25
 GradientDesaturationNight=0.25
@@ -83,7 +83,7 @@ GradientTopCurveInteriorDay=1.0
 GradientTopCurveInteriorNight=1.0
 GradientTopColorFilterDawn=1, 1, 1
 GradientTopColorFilterSunrise=0.267, 0.557, 0.808
-GradientTopColorFilterDay=0.0196, 0.584, 0.827
+GradientTopColorFilterDay=0, 0.573, 0.816
 GradientTopColorFilterSunset=0.267, 0.557, 0.808
 GradientTopColorFilterDusk=1, 1, 1
 GradientTopColorFilterNight=1, 1, 1
@@ -107,7 +107,7 @@ GradientMiddleCurveInteriorDay=1.0
 GradientMiddleCurveInteriorNight=1.0
 GradientMiddleColorFilterDawn=1, 1, 1
 GradientMiddleColorFilterSunrise=0.522, 0.737, 0.929
-GradientMiddleColorFilterDay=0.118, 0.722, 0.98
+GradientMiddleColorFilterDay=0.353, 0.788, 0.973
 GradientMiddleColorFilterSunset=0.522, 0.737, 0.929
 GradientMiddleColorFilterDusk=1, 1, 1
 GradientMiddleColorFilterNight=1, 1, 1
@@ -131,7 +131,7 @@ GradientHorizonCurveInteriorDay=1.0
 GradientHorizonCurveInteriorNight=1.0
 GradientHorizonColorFilterDawn=1, 1, 1
 GradientHorizonColorFilterSunrise=1, 0.706, 0.51
-GradientHorizonColorFilterDay=0.404, 0.718, 0.851
+GradientHorizonColorFilterDay=0.792, 0.902, 0.949
 GradientHorizonColorFilterSunset=1, 0.706, 0.451
 GradientHorizonColorFilterDusk=1, 1, 1
 GradientHorizonColorFilterNight=1, 1, 1
