minor changes that will help me grade

--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1355,7 +1355,7 @@ Enable FXAA=false
 | Enable FXAA=false
 |===== Color ======0
 | Image Saturation:=0
-|  Vibrance=0.0
+|  Vibrance=0.14
 |  RGB Vibrance=1, 1, 1
 |  Global Saturation=1.0
 |  Red Saturation=0.0
@@ -1931,6 +1931,6 @@ Enable FXAA=false
 |  Letterbox Rotation=0.0
 |  Letterbox Color=0, 0, 0
 |  Letterbox Distance=0.0
-| Enable Contrast Adaptive Sharpening=false
+| Enable Contrast Adaptive Sharpening=true
 |  Sharpening Contrast=0.2
 |  Sharpening Amount=1.0
