more improvements for post pass

--- a/enbseries.ini
+++ b/enbseries.ini
@@ -6,7 +6,7 @@ UseOriginalBloom=false
 EnablePrepass=true
 EnablePostPassShader=true
 EnableAdaptation=true
-EnableBloom=true
+EnableBloom=false
 EnableLens=true
 EnableDepthOfField=true
 EnableAmbientOcclusion=true
