--- a/enbseries/enbeffectpostpass.fx.ini
+++ b/enbseries/enbeffectpostpass.fx.ini
@@ -1342,20 +1342,20 @@ Enable FXAA=false
 | Letterbox Color=0, 0, 0
 | Letterbox Distance=0.0
 |===== Camera Effects ======0
-| Enable Lens Distortion=false
+| Enable Lens Distortion=true
 |  Distortion Amount=-10
-| Enable Vingette=false
+| Enable Vingette=true
 |  Vingette Intesity=0.1
-| Enable Grain=false
+| Enable Grain=true
 |  Grain Amount=50
 |  Grain Roughness=1
-| Enable Chromatic Aberration=false
-|  Aberration Strength=1.0
+| Enable Chromatic Aberration=true
+|  Aberration Strength=0.43
 |  Aberration Curve=2.0
 | Enable FXAA=false
 |===== Color ======0
 | Image Saturation:=0
-|  Vibrance=0.14
+|  Vibrance=0.22
 |  RGB Vibrance=1, 1, 1
 |  Global Saturation=1.0
 |  Red Saturation=0.0
@@ -1931,6 +1931,6 @@ Enable FXAA=false
 |  Letterbox Rotation=0.0
 |  Letterbox Color=0, 0, 0
 |  Letterbox Distance=0.0
-| Enable Contrast Adaptive Sharpening=true
+| Enable Contrast Adaptive Sharpening=false
 |  Sharpening Contrast=0.2
 |  Sharpening Amount=1.0
